2004-03-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (mktime_utc): New function to mktime() into
	UTC.
	(parse_rfc822_date): Use mktime_utc() instead of doing it
	ourselves.
	(parse_broken_date): Same.

2004-03-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-buffer.c (stream_write): Fixed a bug when
	writing across block boundaries.

2004-03-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-cipher-context.c (g_mime_cipher_verify): Allow the
	sigstream to be NULL (it is optional afterall).

	Thanks to Peter Bloomfield for reminding me about
	g_ascii_strdown() and g_ascii_strup() and for providing the
	original patch.

	* gmime/gmime-charset.c (locale_parse_lang): Don't use
	g_ascii_strdown() and g_ascii_strup() as these functions strdup
	the result rather than working on the input string.
	(g_mime_charset_map_init): Instead of strdup()ing the charset name
	and then using g_ascii_strdown(), just use g_ascii_strdown() since
	it malloc's. Also, even if we have nl_langinfo(), we want to parse
	LC_ALL to get the locale lang.

2004-03-06  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.3

2004-02-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-buffer.c (stream_write): Shrink buflen down
	by the number of bytes flushed or we'll loop forever writing the
	same block over and over.

	* gmime/gmime-strea.[c,h]: Make stream_write() take a const char
	*buf argument instead of char *buf.

	* gmime/gmime-stream-*.c (stream_write): constify the buf
	argument.

	* gmime/gmime-stream-null.c (stream_write): Count newlines as
	well.

2004-02-26  Jeffrey Stedfast  <fejj@ximian.com>

	* util/*.[c,h]: Moved here from gmime/

	* gmime/*.h: Fixed #includes

	* gmime/cache.[c,h]: Moved to util/

	* gmime/gtrie.[c,h]: Moved to util/

	* gmime/list.[c,h]: Moved to util/

	* gmime/md5-utils.[c,h]: Moved to util/

	* gmime/memchunk.[c,h]: Moved to util/
